--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,8 @@
     <color name="rowShade">#feee</color>
     <color name="warningBackground">#fec1</color>
     <color name="warningText">#fc66</color>
-    <color name="highlight">#fff4</color>
+    <color name="highlight">#fffa</color>
+    <color name="textNegative">#fa21</color>
+    <color name="textWarning">#fa90</color>
+    <color name="textPositive">#f180</color>
 </resources>
