--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,19 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="HeadingText">
+        <item name="android:textSize">@dimen/text_size_heading</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SubHeadingText">
+        <item name="android:textSize">@dimen/text_size_subheading</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SmallHeadingText">
+        <item name="android:textSize">@dimen/text_size_smallheading</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
