--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -6,17 +6,34 @@
     android:orientation="horizontal"
     android:gravity="center">
 
-    <TextView
+    <LinearLayout
         android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:background="@drawable/button_background"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:textAlignment="center"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:gravity="center"
+        android:minWidth="150dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_scan_white_36dp"
+            android:layout_marginRight="10dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:textAlignment="center"/>
+
+    </LinearLayout>
 
 </LinearLayout>
