--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -93,8 +93,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/walletReceive"
+                android:layout_toStartOf="@+id/walletScan"
                 android:src="@drawable/ic_send_black_36dp"
+                android:padding="5dp"
+                android:layout_marginEnd="5dp"
+                android:contentDescription="@string/send"
+                android:onClick="onClick"/>
+
+            <ImageView
+                android:id="@+id/walletScan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/walletReceive"
+                android:src="@drawable/ic_scan_black_36dp"
                 android:padding="5dp"
                 android:layout_marginEnd="5dp"
                 android:contentDescription="@string/send"
