--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="action_bar_height">50dp</dimen>
+    <dimen name="text_size_heading">20sp</dimen>
+    <dimen name="text_size_subheading">16sp</dimen>
+    <dimen name="text_size_smallheading">14sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
 </resources>
