--- a/app/src/main/res/layout/wallet_history.xml
+++ b/app/src/main/res/layout/wallet_history.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+        style="@style/HeadingText"
         android:textAlignment="center"/>
     <ScrollView
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/pending_transactions"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+                style="@style/HeadingText"/>
 
             <LinearLayout
                 android:id="@+id/walletPending"
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/confirmed_transactions"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+                style="@style/HeadingText"/>
 
             <LinearLayout
                 android:id="@+id/walletRecent"
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/no_transactions"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+                style="@style/HeadingText"/>
 
         </LinearLayout>
 
