--- a/app/src/main/res/layout/enter_payment_code.xml
+++ b/app/src/main/res/layout/enter_payment_code.xml
@@ -10,8 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
+        style="@style/HeadingText"
         android:gravity="center"
         android:padding="5dp"
         android:textAlignment="center"
