--- a/app/src/main/res/layout/wallet_history.xml
+++ b/app/src/main/res/layout/wallet_history.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/walletPendingTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="@string/pending_transactions"
                 style="@style/HeadingText"/>
 
@@ -33,7 +34,7 @@
                 android:id="@+id/walletPending"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
+                android:paddingBottom="20dp"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -49,7 +50,7 @@
                 android:id="@+id/walletRecent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
+                android:paddingBottom="20dp"
                 android:orientation="vertical">
 
             </LinearLayout>
