--- a/app/src/main/res/layout/send_payment.xml
+++ b/app/src/main/res/layout/send_payment.xml
@@ -14,7 +14,6 @@
         android:textAlignment="center"
         style="@style/HeadingText"/>
 
-
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -44,40 +43,57 @@
             android:text="@string/legacy_warning"/>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/amountLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:text="@string/amount_title"
             android:labelFor="@id/amount"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="10dp"/>
 
         <EditText
             android:id="@+id/amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:inputType="numberDecimal"/>
+            android:inputType="numberDecimal"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/amountLabel"
+            android:layout_toStartOf="@id/units"/>
 
         <Spinner
             android:id="@+id/units"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"/>
 
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/satoshiAmountLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@string/bitcoins"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/satoshiAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 00 000 000"/>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/amountConverted"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_margin="5dp"/>
 
     <TextView
         android:id="@+id/descriptionTitle"
