Add initial block download, wallet synchronizing and wallet needs backup messages.

--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -58,15 +58,27 @@
             android:contentDescription="@string/locked"
             android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/walletName"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            style="@style/SubHeadingText"
-            android:gravity="center_vertical"
-            android:padding="5dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textColor="#fff"/>
+            android:padding="5dp"
+            android:layout_gravity="center_vertical">
+            <TextView
+                android:id="@+id/walletName"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/SubHeadingText"
+                android:textColor="#fff"/>
+            <TextView
+                android:id="@+id/walletWarning"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="@color/textNegativeLight"
+                android:visibility="gone"/>
+        </LinearLayout>
 
     </LinearLayout>
 
